--- a/style.css
+++ b/style.css
@@ -41,8 +41,6 @@ body {
     blink-caret .75s step-end infinite;
 }
 
-/* Add these styles to your existing CSS */
-
 
 
 @keyframes typing {
@@ -302,9 +300,12 @@ body {
     text-align: center;
     padding: 20px;
   }
+  .typewriter h1 {
+    font-size: 30px;
+    padding: 10px;
+  }
 }
 
-/* Add this animation style to your existing CSS */
 
 @keyframes slideInFromBottom {
   0% {
@@ -315,5 +316,18 @@ body {
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+.typewriter-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  padding: 20px;
 }
 
